sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: illegal start of simple expression
	   if(plusPetit(k+1,k))){
                               ^