sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var inverse:Boolean=true;
var T: Int=getNombreValeurs()
while(inverse==true){
     for(k<-0 to T-2){
	  i=0
	   if(plusPetit(k+1,k))){
	    echange(k+1,k)
	    inverse=true
	}
	
} 
}
}
